--- a/offTheHook/styles.css
+++ b/offTheHook/styles.css
@@ -1,6 +1,7 @@
 .jumbotron{
     background-image: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/easy-pescatarian-recipes-1557518379.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*);
     background-size: 100%;
+    height: 220px;
 
 }
 
@@ -9,3 +10,30 @@
     background-color: rgba(0,0,0,0.2);
     color: seashell;
 }
+
+p{
+    padding: 30px;
+}
+
+.contactform{
+    border: 2px solid black ;
+    padding: 10px;
+    margin: 80px;
+    text-align: center;
+    margin-left: 120px;
+    margin-right: 120px;
+}
+
+.text{
+    
+    margin-bottom: 20px;
+}
+
+.address{
+    margin-top: 20px;
+}
+
+.datalist{
+    padding-left: 30px;
+}
+
